@@ -1,3 +1,7 @@
+Jan 12, 2015 - chris ---------------------------------------------------
+o issue #46: fixed segfault in approx. matching (thanks, Joel
+	Jacobson)
+
 Jan 09, 2015 - chris ---------------------------------------------------
 o issue #45: fixed segfault in Journal recovery (thanks, Michael
 	Moellney)
